[package]
name = "blackout"
author = "Charley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version =  "0.11.18", features = ["json"] }
serde_json = "1.0.99"
directories = "5.0"
box_drawing = "0.1.2"
